Minor CSS changes

--- a/src/components/ListForm.css
+++ b/src/components/ListForm.css
@@ -1,6 +1,6 @@
 .listForm {
-	border: 1px solid black;
-	border-radius: 2px;
+	/* border: 1px solid black;
+	border-radius: 2px; */
 	min-width: 40%;
 	max-width: 80%;
 	margin: 0 auto;
